# gun-violence-trauma-access-philly

./: .env.example  .gitignore  AUDIT_PROMPT.md  CONTRIBUTING.md  Makefile  README.md  environment.yml  pyproject.toml  requirements.txt  trauma_desert_execution_plan.md
configs/: params.yml
data/geo/: philadelphia_tracts.geojson
data/isochrones/: trauma_center_isochrones.geojson
data/manual/: trauma_centers_2025-12-25.csv
data/processed/: best_scenario_analysis.geojson  shootings_clean.csv  shootings_with_tracts.csv  tract_demographics.csv  tract_shooting_density.geojson  tract_transport_times.csv  tracts_analysis_ready.geojson  tracts_bivariate_classified.geojson  tracts_time_of_day_classified.geojson  tracts_with_vulnerability.geojson  trauma_centers_geocoded.csv
data/raw/: manifest.json
docs/: bivariate_choropleth.html  data.html  data_dictionary.md  findings.html  index.html  isochrone_coverage.html  maps.html  methodology.html  methodology.md  patient_flow_map.html  style.css  visualizations.html
docs/paper/: index.html  second_draft.md  trauma_desert_paper.md
docs/policy/: index.html  policy_report.md
outputs/interactive/: bivariate_choropleth.html  isochrone_coverage.html
outputs/tables/: demographic_disparity_analysis.csv  demographics_by_bivariate_class.csv  fatality_by_transport_time.csv  fatality_regression_results.csv  golden_hour_by_race.csv  golden_hour_distribution.csv  hospital_catchment_statistics.csv  oaxaca_decomposition_results.csv  oaxaca_predictor_contributions.csv  scenario_impact_rankings.csv  spot_check_results.csv  stop_the_bleed_priority_zones.csv  stop_the_bleed_training_sites.csv  temporal_trends_annual.csv  temporal_trends_by_tract.csv  time_of_day_sensitivity_summary.csv  tract_shooting_trends.csv  tract_stb_priority_scores.csv  tract_vulnerability_scores.csv  tracts_that_flip_by_time.csv  trauma_desert_summary_statistics.csv  trauma_desert_tracts.csv  (+2 more)
(+34 files in other folders)
